[gd_scene load_steps=3 format=3 uid="uid://cyt4i43pnhe17"]

[ext_resource type="Script" path="res://scenes/game_over.gd" id="1_yrmgh"]
[ext_resource type="PackedScene" uid="uid://dv2y18ye8j7o0" path="res://scenes/main_menu_scene.tscn" id="2_x5d86"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yrmgh")
main_menu_scene = ExtResource("2_x5d86")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Game Over"

[node name="ScoreLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Return to Main Menu"

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
